Go: Add integration test.
* autogen.sh (GNULIB_MODULES_RUNTIME_FOR_SRC): Add gocomp-script.
* gettext-tools/tests/init-env.in (GO_CHOICE, GO): New variables.
* gettext-tools/tests/lang-go: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.
* HACKING: Document dependencies for lang-go.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@
 /build-aux/csharpexec.sh.in
 /build-aux/git-version-gen
 /build-aux/gitlog-to-changelog
+/build-aux/gocomp.sh.in
 /build-aux/install-reloc
 /build-aux/javacomp.sh.in
 /build-aux/javaexec.sh.in
@@ -650,6 +651,7 @@ autom4te.cache/
 /gettext-tools/config.h
 /gettext-tools/csharpcomp.sh
 /gettext-tools/csharpexec.sh
+/gettext-tools/gocomp.sh
 /gettext-tools/javacomp.sh
 /gettext-tools/javaexec.sh
 /gettext-tools/libtool
