--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -230,6 +230,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-javascript \
 	lang-guile lang-clisp lang-elisp lang-librep \
 	lang-rust \
+	lang-go \
 	lang-ruby \
 	lang-sh lang-bash \
 	lang-gawk \
