--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -18,6 +18,8 @@ TESTJAVA="@TESTJAVA@"
 CSHARP_CHOICE="@CSHARP_CHOICE@"
 BUILDCSHARP="@BUILDCSHARP@"
 TESTCSHARP="@TESTCSHARP@"
+GO_CHOICE="@GO_CHOICE@"
+GO="@GO@"
 TESTLIBASPRINTF="@TESTLIBASPRINTF@"
 GLIBC2="@GLIBC2@"
 LOCALE_FR="@LOCALE_FR@"
