examples: Add hello-go example.
* gettext-tools/examples/hello-go/INSTALL: New file.
* gettext-tools/examples/hello-go/autogen.sh: New file.
* gettext-tools/examples/hello-go/autoclean.sh: New file.
* gettext-tools/examples/hello-go/example1/hello1sl.go.in: New file.
* gettext-tools/examples/hello-go/example1/hello1ml.go.in: New file.
* gettext-tools/examples/hello-go/example1/go.mod.in: New file.
* gettext-tools/examples/hello-go/example1/Makefile.am: New file.
* gettext-tools/examples/hello-go/example2/hello2sl.go.in: New file.
* gettext-tools/examples/hello-go/example2/go.mod.in: New file.
* gettext-tools/examples/hello-go/example2/Makefile.am: New file.
* gettext-tools/examples/hello-go/example3/hello3ml.go.in: New file.
* gettext-tools/examples/hello-go/example3/go.mod.in: New file.
* gettext-tools/examples/hello-go/example3/Makefile.am: New file.
* gettext-tools/examples/hello-go/Makefile.am: New file.
* gettext-tools/examples/hello-go/configure.ac: New file.
* gettext-tools/examples/hello-go/m4/Makefile.am: New file.
* gettext-tools/examples/hello-go/po/LINGUAS: New file.
* gettext-tools/examples/hello-go/po/Makefile.am: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-go.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-go.
(hello-go.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-go.
($(srcdir)/../hello-go/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-go as well.
* gettext-tools/examples/README: Mention hello-go.
* gettext-tools/doc/lang-go.texi: Likewise.
* NEWS: Likewise.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -335,6 +335,24 @@ EXAMPLESFILES = \
   hello-rust/m4/Makefile.am \
   hello-rust/po/Makefile.am \
   \
+  hello-go/INSTALL \
+  hello-go/autogen.sh \
+  hello-go/autoclean.sh \
+  hello-go/example1/hello1sl.go.in \
+  hello-go/example1/hello1ml.go.in \
+  hello-go/example1/go.mod \
+  hello-go/example1/Makefile.am \
+  hello-go/example2/hello2sl.go.in \
+  hello-go/example2/go.mod \
+  hello-go/example2/Makefile.am \
+  hello-go/example3/hello3ml.go.in \
+  hello-go/example3/go.mod \
+  hello-go/example3/Makefile.am \
+  hello-go/Makefile.am \
+  hello-go/configure.ac \
+  hello-go/m4/Makefile.am \
+  hello-go/po/Makefile.am \
+  \
   hello-ruby/INSTALL \
   hello-ruby/autogen.sh \
   hello-ruby/autoclean.sh \
@@ -456,6 +474,7 @@ EXAMPLESDIRS = \
   hello-clisp \
   hello-librep \
   hello-rust \
+  hello-go \
   hello-ruby \
   hello-sh \
   hello-gawk \
