--- a/gettext-tools/examples/po/Makefile.am
+++ b/gettext-tools/examples/po/Makefile.am
@@ -59,6 +59,10 @@ POTFILES = \
   hello-clisp/hello.lisp.in \
   hello-librep/hello.jl.in \
   hello-rust/src/main.rs.in \
+  hello-go/example1/hello1sl.go.in \
+  hello-go/example1/hello1ml.go.in \
+  hello-go/example2/hello2sl.go.in \
+  hello-go/example3/hello3ml.go.in \
   hello-ruby/hello.rb \
   hello-sh/hello.sh \
   hello-gawk/hello.awk \
@@ -98,6 +102,7 @@ SMALLPOTS = \
   hello-clisp.pot \
   hello-librep.pot \
   hello-rust.pot \
+  hello-go.pot \
   hello-ruby.pot \
   hello-sh.pot \
   hello-gawk.pot \
@@ -327,6 +332,9 @@ hello-librep.pot : $(POTFILES_DEPS)
 hello-rust.pot : $(POTFILES_DEPS)
 	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-rust
 
+hello-go.pot : $(POTFILES_DEPS)
+	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-go
+
 hello-ruby.pot : $(POTFILES_DEPS)
 	$(USE_BUILT_PROGS) $(SHELL) '$(srcdir)/xsmallpot.sh' '$(srcdir)' hello-ruby
 
@@ -458,6 +466,7 @@ SMALLPOFILES_FOR_lang = \
   $(srcdir)/../hello-clisp/po/$$lang.po \
   $(srcdir)/../hello-librep/po/$$lang.po \
   $(srcdir)/../hello-rust/po/$$lang.po \
+  $(srcdir)/../hello-go/po/$$lang.po \
   $(srcdir)/../hello-ruby/po/$$lang.po \
   $(srcdir)/../hello-sh/po/$$lang.po \
   $(srcdir)/../hello-gawk/po/$$lang.po \
@@ -543,6 +552,9 @@ $(srcdir)/../hello-librep/po/$(LL).po: $(srcdir)/hello-librep.pot $(srcdir)/$(LL
 
 $(srcdir)/../hello-rust/po/$(LL).po: $(srcdir)/hello-rust.pot $(srcdir)/$(LL).po
 	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-rust $(LL)
+
+$(srcdir)/../hello-go/po/$(LL).po: $(srcdir)/hello-go.pot $(srcdir)/$(LL).po
+	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-go $(LL)
 
 $(srcdir)/../hello-ruby/po/$(LL).po: $(srcdir)/hello-ruby.pot $(srcdir)/$(LL).po
 	$(USE_BUILT_PROGS) cd $(srcdir) && $(SHELL) mmsmallpo.sh hello-ruby $(LL)
