examples: Add hello-go-http example.
* gettext-tools/examples/hello-go-http/INSTALL: New file.
* gettext-tools/examples/hello-go-http/autogen.sh: New file.
* gettext-tools/examples/hello-go-http/autoclean.sh: New file.
* gettext-tools/examples/hello-go-http/example1/hello1ml.go.in: New file.
* gettext-tools/examples/hello-go-http/example1/go.mod.in: New file.
* gettext-tools/examples/hello-go-http/example1/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/configure.ac: New file.
* gettext-tools/examples/hello-go-http/m4/Makefile.am: New file.
* gettext-tools/examples/hello-go-http/po/LINGUAS: New file.
* gettext-tools/examples/hello-go-http/po/Makefile.am: New file.
* gettext-tools/examples/Makefile.am (EXAMPLESFILES, EXAMPLESDIRS): Add
hello-go-http.
* gettext-tools/examples/po/Makefile.am (POTFILES, SMALLPOTS): Update for
hello-go-http.
(hello-go-http.pot): New target.
(SMALLPOFILES_FOR_lang): Update for hello-go-http.
($(srcdir)/../hello-go-http/po/$(LL).po): New rule.
* gettext-tools/examples/check-examples (func_check_autoclean_all,
func_check_distclean_all, func_check_maintainerclean_all,
func_check_maintainerclean_vpath_all, func_check_dist_all,
func_check_dist_vpath_all, func_check_install_all, func_check_uninstall_all,
func_check_distcheck_all, func_check_all): Handle hello-go-http as well.
* gettext-tools/examples/README: Mention hello-go-http.
* gettext-tools/doc/lang-go.texi: Likewise.
* NEWS: Likewise.

--- a/gettext-tools/examples/Makefile.am
+++ b/gettext-tools/examples/Makefile.am
@@ -353,6 +353,17 @@ EXAMPLESFILES = \
   hello-go/m4/Makefile.am \
   hello-go/po/Makefile.am \
   \
+  hello-go-http/INSTALL \
+  hello-go-http/autogen.sh \
+  hello-go-http/autoclean.sh \
+  hello-go-http/example1/hello1ml.go.in \
+  hello-go-http/example1/go.mod \
+  hello-go-http/example1/Makefile.am \
+  hello-go-http/Makefile.am \
+  hello-go-http/configure.ac \
+  hello-go-http/m4/Makefile.am \
+  hello-go-http/po/Makefile.am \
+  \
   hello-ruby/INSTALL \
   hello-ruby/autogen.sh \
   hello-ruby/autoclean.sh \
@@ -475,6 +486,7 @@ EXAMPLESDIRS = \
   hello-librep \
   hello-rust \
   hello-go \
+  hello-go-http \
   hello-ruby \
   hello-sh \
   hello-gawk \
