--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -574,6 +574,7 @@ dnl a newer version of tree-sitter-<lang>.
 AC_SUBST([TREE_SITTER_VERSION])
 AC_SUBST([TREE_SITTER_GO_VERSION])
 AC_SUBST([TREE_SITTER_RUST_VERSION])
+AC_SUBST([TREE_SITTER_TYPESCRIPT_VERSION])
 
 PACKAGE_SUFFIX="-$ARCHIVE_VERSION"
 AC_SUBST([PACKAGE_SUFFIX])
