--- a/.gitignore
+++ b/.gitignore
@@ -954,6 +954,8 @@ core
 /gettext-tools/src/gettext.res
 /gettext-tools/src/libxgettextts1.a
 /gettext-tools/src/libxgettextts2.a
+/gettext-tools/src/libxgettextts3.a
+/gettext-tools/src/libxgettextts4.a
 /gettext-tools/src/textstyle.h
 /gettext-tools/src/textstyle/stdbool.h
 /gettext-tools/src/textstyle/version.h
