D support: Add the runtime library.
* gnulib-local/m4/d.m4: New file.
* gnulib-local/modules/d: New file.
* gnulib-local/Makefile.am (EXTRA_DIST): Add d.m4 and the 'd' module.
* autogen.sh (GNULIB_MODULES_RUNTIME_OTHER): Add d, dcomp-script.
* gettext-runtime/intl-d/Makefile.am: New file.
* gettext-runtime/intl-d/gnu/libintl/package.d: New file.
* gettext-runtime/intl-d/gnu/libintl/libintl.d: New file.
* gettext-runtime/intl-d/gnu/libintl/internal/low.d: New file.
* gettext-runtime/configure.ac: Invoke gt_D_CHOICE, gt_DCOMP. Set the variable
BUILDD and the Automake conditional BUILD_D.
* gettext-runtime/Makefile.am (SUBDIRS): Add intl-d.
* NEWS: Mention libintl_d.a.
* gettext-runtime/NEWS: Likewise.
* PACKAGING: Add the sources and binary for the libintl_d library.
* DEPENDENCIES: Mention the D compiler and runtime.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 /build-aux/config.rpath
 /build-aux/csharpcomp.sh.in
 /build-aux/csharpexec.sh.in
+/build-aux/dcomp.sh.in
 /build-aux/git-version-gen
 /build-aux/gitlog-to-changelog
 /build-aux/gocomp.sh.in
@@ -443,6 +444,7 @@
 /gettext-runtime/intl/Makefile.in
 /gettext-runtime/intl-csharp/Makefile.in
 /gettext-runtime/intl-java/Makefile.in
+/gettext-runtime/intl-d/Makefile.in
 /gettext-runtime/libasprintf/aclocal.m4
 /gettext-runtime/libasprintf/configure
 /gettext-runtime/libasprintf/config.h.in
@@ -623,6 +625,7 @@ autom4te.cache/
 /gettext-runtime/Makefile
 /gettext-runtime/config.h
 /gettext-runtime/csharpcomp.sh
+/gettext-runtime/dcomp.sh
 /gettext-runtime/javacomp.sh
 /gettext-runtime/libtool
 /gettext-runtime/stamp-h1
@@ -634,6 +637,7 @@ autom4te.cache/
 /gettext-runtime/intl/stamp-h1
 /gettext-runtime/intl-csharp/Makefile
 /gettext-runtime/intl-java/Makefile
+/gettext-runtime/intl-d/Makefile
 /gettext-runtime/libasprintf/Makefile
 /gettext-runtime/libasprintf/config.h
 /gettext-runtime/libasprintf/libtool
@@ -711,6 +715,7 @@ autom4te.cache/
 /gettext-runtime/intl-csharp/GNU.Gettext.pdb
 /gettext-runtime/intl-java/**/*.class
 /gettext-runtime/intl-java/libintl.jar
+/gettext-runtime/intl-d/libintl_d.a
 /gettext-runtime/libasprintf/libasprintf.la
 /gettext-runtime/man/gettext.1
 /gettext-runtime/man/gettext.1.html
