--- a/gettext-tools/doc/Makefile.am
+++ b/gettext-tools/doc/Makefile.am
@@ -81,6 +81,7 @@ gettext_TEXINFOS = \
   lang-gawk.texi \
   lang-lua.texi \
   lang-pascal.texi \
+  lang-d.texi \
   lang-smalltalk.texi \
   lang-vala.texi \
   lang-wxwidgets.texi \
