--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -886,7 +886,7 @@ if test -f "$srcdir/Makefile.am"; then
   for file in $m4filelist; do
     same=no
     if test -f "$srcdir/$m4dir/$file"; then
-      if cmp -s "@datadir@/aclocal/$file" "$srcdir/$m4dir/$file"; then
+      if cmp -s "@datadir@/gettext/m4/$file" "$srcdir/$m4dir/$file"; then
         same=yes
       fi
     else
@@ -900,7 +900,7 @@ if test -f "$srcdir/Makefile.am"; then
       fi
     fi
     func_backup "$m4dir/$file"
-    func_linkorcopy "@datadir@/aclocal/$file" "@datadir@/aclocal/$file" "$m4dir/$file"
+    func_linkorcopy "@datadir@/gettext/m4/$file" "@datadir@/gettext/m4/$file" "$m4dir/$file"
   done
   missing_m4Makefileam=
   if test -n "$added_m4files"; then
@@ -1092,7 +1092,7 @@ else
   please="$please
 Please add the files
 $m4filelist
-from the @datadir@/aclocal directory to your aclocal.m4 file.
+from the @datadir@/gettext/m4 directory to your aclocal.m4 file.
 "
 fi
 
