D support: Add a unit test.
* autogen.sh (GNULIB_MODULES_TOOLS_OTHER): Add d, dcomp-script.
* gettext-tools/configure.ac: Set and substitute BUILDD.
* gettext-tools/tests/init-env.in: Propagate D_CHOICE, BUILDD.
* gettext-tools/tests/lang-d: New file.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/.gitignore
+++ b/.gitignore
@@ -655,6 +655,7 @@ autom4te.cache/
 /gettext-tools/config.h
 /gettext-tools/csharpcomp.sh
 /gettext-tools/csharpexec.sh
+/gettext-tools/dcomp.sh
 /gettext-tools/gocomp.sh
 /gettext-tools/javacomp.sh
 /gettext-tools/javaexec.sh
