--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -20,6 +20,8 @@ BUILDCSHARP="@BUILDCSHARP@"
 TESTCSHARP="@TESTCSHARP@"
 GO_CHOICE="@GO_CHOICE@"
 GO="@GO@"
+D_CHOICE="@D_CHOICE@"
+BUILDD="@BUILDD@"
 TESTLIBASPRINTF="@TESTLIBASPRINTF@"
 GLIBC2="@GLIBC2@"
 LOCALE_FR="@LOCALE_FR@"
