--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -242,6 +242,7 @@ TESTS = gettext-1 gettext-2 \
 	lang-gawk \
 	lang-lua \
 	lang-pascal \
+	lang-d \
 	lang-smalltalk \
 	lang-vala \
 	lang-tcl \
