gettextize: Fix last commit.
* gettext-tools/m4/Makefile.am (OLD_M4_FILES): New variable.
(uninstall-macros): Delete only these files from @aclocaldir@.

--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -54,8 +54,53 @@ EXTRA_DIST = \
   locale-de.m4
 
 
+# List of all file names that we ever stored in $(aclocaldir).
+OLD_M4_FILES = \
+  build-to-host.m4 \
+  codeset.m4 \
+  extern-inline.m4 \
+  fcntl-o.m4 \
+  gettext.m4 \
+  glibc2.m4 \
+  glibc21.m4 \
+  host-cpu-c-abi.m4 \
+  iconv.m4 \
+  intdiv0.m4 \
+  intl.m4 \
+  intldir.m4 \
+  intlmacosx.m4 \
+  intmax.m4 \
+  inttypes.m4 \
+  inttypes-h.m4 \
+  inttypes-pri.m4 \
+  inttypes_h.m4 \
+  isc-posix.m4 \
+  lcmessage.m4 \
+  lib-ld.m4 \
+  lib-link.m4 \
+  lib-prefix.m4 \
+  lock.m4 \
+  longdouble.m4 \
+  longlong.m4 \
+  nls.m4 \
+  po.m4 \
+  printf-posix.m4 \
+  progtest.m4 \
+  signed.m4 \
+  size_max.m4 \
+  stdint_h.m4 \
+  threadlib.m4 \
+  uintmax_t.m4 \
+  ulonglong.m4 \
+  visibility.m4 \
+  wchar_t.m4 \
+  wint_t.m4 \
+  xsize.m4
+
 # We don't install the *.m4 files in $(aclocaldir) any more.
 install-data-local: uninstall-macros
 uninstall-local: uninstall-macros
 uninstall-macros:
-	rm -rf '$(DESTDIR)@aclocaldir@'
+	for f in $(OLD_M4_FILES); do \
+	  rm -f '$(DESTDIR)@aclocaldir@'/$$f; \
+	done
