--- a/gettext-tools/examples/installpaths.in
+++ b/gettext-tools/examples/installpaths.in
@@ -1,6 +1,6 @@
 # Shell script snippet that records various directories found by 'configure'.
 
-# Copyright (C) 2003, 2005 Free Software Foundation, Inc.
+# Copyright (C) 2003-2025 Free Software Foundation, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -20,6 +20,7 @@ exec_prefix="@exec_prefix@"
 datarootdir="@datarootdir@"
 datadir="@datadir@"
 docdir="@docdir@"
+includedir="@includedir@"
 ACLOCALDIR="@aclocaldir@"
 GETTEXTSRCDIR="@datadir@/gettext"
 GETTEXTSRCPODIR="@datadir@/gettext/po"
